[package]
name = "rtw"
version = "0.1.1"
authors = ["PicoJr <PicoJr@notanemail.com>"]
edition = "2018"
repository = "https://github.com/PicoJr/rtw"
description = "time tracker command line tool"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "2.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
regex = "1"
assert_cmd = "0.12"
