[package]
name = "rtw"
version = "1.1.0"
authors = ["PicoJr <picojr_dev@gmx.com>"]
edition = "2018"
repository = "https://github.com/PicoJr/rtw"
description = "time tracker command line tool"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["time", "tracker", "cli", "tool"]
categories = ["command-line-utilities"]
include = ["src/**/*", "/LICENSE", "/README.md", "/CHANGELOG.md", "/commands.md", "/img/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
anyhow = "1.0"
thiserror = "1.0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "2.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1.4"
config = "0.10.1"
ansi_term = "0.12.1"
term_size = "0.3.2"
tbl = "0.1.1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "0.12"
predicates = "1.0.4"
