[package]
name = "rtw"
version = "2.3.1"
authors = ["PicoJr <picojr_dev@gmx.com>"]
edition = "2018"
repository = "https://github.com/PicoJr/rtw"
description = "time tracker command line tool"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["time", "tracker", "cli", "tool"]
categories = ["command-line-utilities"]
include = ["src/**/*", "/LICENSE", "/README.md", "/CHANGELOG.md", "/commands.md", "/shell-completion.md", "/img/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
anyhow = "1.0"
thiserror = "1.0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs-next = "2.0.0"
chrono = { version = "0.4", features = ["serde"] }
htp = "0.4.0"
config = { version = "0.10.1", default-features = false, features = ["json"] }
ansi_term = "0.12.1"
term_size = "0.3.2"
tbl = "1.1.0"
icalendar = "0.9.0"
itertools = "0.9"
chrono-humanize = "0.1.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2.0.4"
predicates = "2.1.1"

# Fix CVE-2022-24713
regex = "1.5.5"
